plugins {
    id 'java'
    id 'maven-publish'
    id("com.gradleup.shadow") version "9.0.0-beta8"
}

apply plugin: 'java'

group = 'it.mattiolservices'
version = '1.0'

def group = 'it.mattiolservices'
def artifact = 'CoralClans'

repositories {
    mavenCentral()
    maven {
        name = "spigotmc-repo"
        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
    }
    maven {
        name = "sonatype"
        url = "https://oss.sonatype.org/content/groups/public/"
    }

    maven {
        url = 'https://repo.extendedclip.com/releases/'
    }

    maven { url "https://maven.enginehub.org/repo/" }
}

dependencies {
    compileOnly "org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT"

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    compileOnly 'me.clip:placeholderapi:2.11.6'

    implementation 'io.github.revxrsal:lamp.common:4.0.0-rc.12'
    implementation 'io.github.revxrsal:lamp.bukkit:4.0.0-rc.12'

    implementation 'com.zaxxer:HikariCP:7.0.0'

    implementation "dev.dejvokep:boosted-yaml:1.3.6"

    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.11'

    implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(23))
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
    options.release = 23
}


tasks {
    compileJava {
        dependsOn clean
        options.encoding = 'UTF-8'
    }

    build {
        dependsOn shadowJar
        dependsOn publish
    }
}

shadowJar {
    archiveFileName = artifact + '-' + rootProject.version + '.jar'
   // minimize()
}


jar{
    archiveFileName = artifact + '-' + rootProject.version + '.jar'
}


processResources {
    filteringCharset 'UTF-8'
    def commitId = 'git rev-parse --short HEAD'.execute().text.trim()
    expand(
            'GIT_COMMIT_HASH': commitId,
            'version': project.version
    )
}


publishing {
    publications {
        maven(MavenPublication) {
            groupId = group
            artifactId = artifact

            from components.java
        }
    }
}